Version 3.2.2 - 12 June 2023
    - This is a maintenance release
    - Compiling errors fixed on SunOS/OpenIndiana

Version 3.2.1
    - This is a maintenance release
    - CMake dependent flag name changes
          USE_OPENQASM2_SPECS -> QASMTOOLS_QASM2_SPECS

Version 3.2 - 26 May 2023
    - This is a maintenance release
    - Migrated all continuous integration to GitHub actions
    - Minor updates in qasmtools

Version 3.1 - 13 May 2023
    - staq is now available on Homebrew (macOS/Linux), and can be installed
      with 'brew install staq'
    - Migrated pystaq installation method to pyproject.toml
    - CMake minimum required version bumped to 3.15

Version 3.0.1 - 2 April 2023
    - This is a maintenance release with minor changes
    - Updated pybind11 to version 2.10.4

Version 3.0 - 20 March 2023
    - Complete Windows support for pystaq
    - Bumped GoogleTest version to 1.12.1
          https://github.com/google/googletest/commit/58d77fa8070e8cec2dc1ed015d66b454c8d78850
    - Implemented a lattice surgery compiler
      ["include/output/lattice_surgery.hpp"]

Version 2.1 - 17 January 2022
    - Added pystaq, a Python wrapper around staq. See
      https://github.com/softwareQinc/staq/wiki/pystaq for more details.
    - Due to phase discrepancies, by default the parser now uses Qiskit
      definitions (which are also the usual ones used in QC textbooks). To
      switch to standard OpenQASM 2.0 gate definitions, configure the project
      with 'cmake -DUSE_OPENQASM2_SPECS=ON'.
    - When building with CMake, the new STAQ_VERSION_NUM (numeric) and
      STAQ_VERSION_STR (string) preprocessor definitions are automatically
      injected in the code

Version 2.0 - 5 October 2021
    - Decoupled the OpenQASM parser from the main codebase. A hard copy of
      qasmtools (https://github.com/softwareQinc/qasmtools) is now common to
      both staq and Quantum++, and by default uses standard OpenQASM 2.0 gate