@@ -1,3 +1,6 @@
+Pre-release
+    - Minor bugfix in pystaq setup.py that prevented pip install from remote
+
 Version 3.2.2 - 12 June 2023
     - This is a maintenance release
     - Compiling errors fixed on SunOS/OpenIndiana
